tests/negative/runtime/int_overflow_sub/input.ci
void main() {
    int x = -9223372036854775808;  // INT64_MIN
    int y = x - 1;
    print(toString(y) + "\n");
}
